--- a/styles.css
+++ b/styles.css
@@ -92,16 +92,20 @@ nav{
     margin-top: 120px;
 }
 .cards{
-    padding: 50px;
-    display: grid;
-    grid-template-columns: auto auto auto auto;
+    padding: 100px;
+    display: flex;
+    justify-content: center;
     column-gap: 30px;
+    align-content: center;
+    justify-content: center;
 }
 .project{
+    justify-content: center;
+    align-content: center;
     border-radius: 50px;
     background-color: rgb(245, 245, 245);
-    width: 17rem;
-    height: 30rem;
+    width: 20%;
+    height: 70%;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 .project img{
@@ -127,7 +131,8 @@ nav{
 .cardDescription{
     padding: 25px;
 }
-.cardDescription h3{
+.cardDescription h3
+{
     color: black;
     margin: 0;
     text-align: center;
