--- a/styles.css
+++ b/styles.css
@@ -89,7 +89,7 @@ nav{
 }
 
 #section3 h1{
-    margin-top: 120px;
+    margin-top: 15%;
 }
 .cards{
     padding: 100px;
@@ -180,7 +180,7 @@ nav{
     color: white;
     border-right: .15em solid rgb(255, 255, 255);
     font-family: "Courier";
-    font-size: 50px;
+    font-size: 30px;
     white-space: nowrap;
     overflow: hidden;
   }
