--- a/styles.css
+++ b/styles.css
@@ -94,11 +94,12 @@ nav{
     justify-content: center;
 }
 .project{
+    position: relative;
     justify-content: center;
     align-content: center;
     border-radius: 50px;
     background-color: rgb(245, 245, 245);
-    width: 20%;
+    width: 15%;
     height: 70%;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
@@ -123,7 +124,7 @@ nav{
     height: 100%;
 }
 .cardDescription{
-    padding: 25px;
+    padding: 10px;
 }
 .cardDescription h3
 {
@@ -142,8 +143,6 @@ nav{
     color: gray;
 }
 #github{
-    padding: 5px;
-    margin-top: 5px;
     overflow: hidden;
     white-space: nowrap;
 }
