--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,7 @@ body{
 }
 h1{
     margin: 0;
+    font-size: xx-large;
 }
 nav{
     width: 100%;
@@ -72,7 +73,7 @@ nav{
 #section2 p{
 
     margin-bottom: 0;
-    width: 550px;
+    width: 450px;
     color: black;
 }
 #section3{
@@ -86,7 +87,7 @@ nav{
     margin-top: 15%;
 }
 .cards{
-    padding: 100px;
+    padding: 20px 0;
     display: flex;
     justify-content: center;
     column-gap: 30px;
@@ -99,8 +100,8 @@ nav{
     align-content: center;
     border-radius: 50px;
     background-color: rgb(245, 245, 245);
-    width: 15%;
-    height: 70%;
+    width: 17%;
+    height: 74%;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 }
 .project img{
@@ -127,7 +128,8 @@ nav{
     padding: 10px;
 }
 .cardDescription h3
-{
+{ 
+  font-size: 1em;
     color: black;
     margin: 0;
     text-align: center;
