update on projects section

--- a/styles.css
+++ b/styles.css
@@ -79,7 +79,7 @@ nav{
     color: black;
 }
 #section3{
-    background-image: url('/images/pexel.jpg');
+    background-image: url('/images/rainbow.jpg');
     background-size: cover;
     display: flex;
     flex-direction: column;
